resources/webidl2/test/invalid/baseline/special-omittable.txt
Syntax error at line 6, since `interface Dictionary`:
  omittable getter float getProperty(DOMString
            ^ Invalid operation
